tests/ui/free_conn.stderr
error[E0505]: cannot move out of `env` because it is borrowed
  --> $DIR/free_conn.rs:39:35
   |
37 |     let conn = connect_to_test_db(&mut env);
   |                                   -------- borrow of `env` occurs here
38 |
39 |     SQLFreeHandle(SQL_HANDLE_ENV, env);
   |                                   ^^^ move out of `env` occurs here
40 |     SQLFreeHandle(SQL_HANDLE_DBC, conn);
   |                                   ---- borrow later used here
